--- a/src/twitch/Cargo.toml
+++ b/src/twitch/Cargo.toml
@@ -5,3 +5,9 @@ authors = ["Shizcow <pohl.devin@gmail.com>"]
 edition = "2018"
 
 [dependencies]
+twitchchat = { version = "0.14", features = ["async", "smol"] }
+anyhow         = "1.0"
+smol           = "1.2"
+toml = "0.5.8"
+clap = "2.33.3"
+serde = { version = "1.0", features = ["derive"] }
