upload to pi is now working

--- a/src/twitch/makefile
+++ b/src/twitch/makefile
@@ -2,6 +2,8 @@ rust_src := $(wildcard src/**)
 
 TARGET_ARCH=arm-unknown-linux-gnueabihf
 
+PI_IP=192.168.43.129
+
 export CARGO_TARGET_ARM_UNKNOWN_LINUX_GNUEABIHF_LINKER=target/tools/arm-bcm2708/arm-linux-gnueabihf/bin/arm-linux-gnueabihf-gcc
 
 
@@ -14,3 +16,6 @@ target/tools:
 
 clean:
 	cargo clean
+
+upload: target/$(TARGET_ARCH)/release/twitch
+	tar cf - target/$(TARGET_ARCH)/release/twitch src/twitch_config.toml | ssh pi@$(PI_IP) "sh -c 'D=\`mktemp -d\`; tar xf - -C \$$D; \$$D/target/$(TARGET_ARCH)/release/twitch -c \$$D/src/twitch_config.toml'"
