--- a/src/twitch/Cargo.toml
+++ b/src/twitch/Cargo.toml
@@ -11,3 +11,5 @@ smol = "1.2"
 toml = "0.5.8"
 clap = "2.33.3"
 serde = { version = "1.0", features = ["derive"] }
+rppal = "0.12.0"
+lazy_static = "1.4.0"
