--- a/src/twitch/src/twitch_config_pi.toml
+++ b/src/twitch/src/twitch_config_pi.toml
@@ -1,7 +1,7 @@
 [connection]
 channel = "shizcow"
 user = "shizcow"
-key_command = "cat ~/totally_secure_directory/stream_key"
+key_command = "cat /home/pi/totally_secure_directory/stream_key"
 
 [permissions]
 admins = ["shizcow"]
