Stream starts automatically with correct URL now

--- a/src/twitch/src/twitch_config_pi.toml
+++ b/src/twitch/src/twitch_config_pi.toml
@@ -7,5 +7,5 @@ key_command = "cat /home/pi/totally_secure_directory/stream_key"
 admins = ["shizcow"]
 
 [stream]
-command = "echo %s"
+command = "raspivid -o - -t 0 -vf -hf -fps 30 -b 6000000 | ffmpeg -re -ar 44100 -ac 2 -acodec pcm_s16le -f s16le -ac 2 -i /dev/zero -f h264 -i - -vcodec copy -acodec aac -ab 128k -g 50 -strict experimental -f flv %s"
 rtmp_command = "cat /home/pi/totally_secure_directory/stream_url"
